<resources>
    <string name="app_name">meetme</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_meeting_list">Meetings</string>
    <string name="title_meeting_detail">Meeting Detail</string>
    <string name="create_meeting">Create</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="date_and_time">Date and time</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="first_name_last_name">First name, last name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="delete_meeting">Delete Meeting</string>
    <string name="update_meeting">Update Meeting</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="delete_meeting">Delete</string>
    <string name="update_meeting">Update</string>
</resources>
