<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#7b1fa2"
    android:fitsSystemWindows="true"
    tools:context=".view.MeetingDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">


        <!-- Title Label-->
        <EditText
            android:id="@+id/etMtgTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ae52d4"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="#ae52d4" />


        <!-- Description Label -->
        <EditText
            android:id="@+id/etMtgDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ae52d4"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="#ae52d4" />

        <!-- Date Label -->
        <TextView
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ae52d4"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/select_date"
            android:textColor="@android:color/white"
            android:textColorHint="#ae52d4" />

        <!-- Time Label -->
        <TextView
            android:id="@+id/etTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ae52d4"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/select_time"
            android:textColor="@android:color/white"
            android:textColorHint="#ae52d4" />

        <!-- Location Label -->
        <EditText
            android:id="@+id/etMtgLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ae52d4"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="#ae52d4" />

        <Button
            android:id="@+id/buttonCreateMeeting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="24dp"
            android:background="#4a0072"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>